--- a/custom_components/actualbudget/manifest.json
+++ b/custom_components/actualbudget/manifest.json
@@ -1,12 +1,14 @@
 {
   "domain": "actualbudget",
   "name": "actualbudget Integration",
-  "codeowners": ["@jlvcm"],
+  "codeowners": ["@phunkmaster"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/jlvcm/ha-actualbudget/blob/main/README.md",
+  "documentation": "https://github.com/PhunkMaster/ha-actualbudget/blob/main/README.md",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/jlvcm/ha-actualbudget/issues",
-  "requirements": ["actualpy==0.10.0"],
-  "version": "2.0.1"
+  "issue_tracker": "https://github.com/PhunkMaster/ha-actualbudget/issues",
+  "requirements": [
+    "actualpy>=0.19.0"
+  ],
+  "version": "2.0.2"
 }
