Update integration name and comment out unused unit of measurement

--- a/custom_components/actualbudget/manifest.json
+++ b/custom_components/actualbudget/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "actualbudget",
-  "name": "actualbudget Integration",
+  "domain": "Actual Budget",
+  "name": "PhunkMaster Actual budget Integration",
   "codeowners": ["@phunkmaster"],
   "config_flow": true,
   "dependencies": [],
